# CnAAlgorithms

easom_simulated_annealing/: Cargo.toml  q1_b_i.csv  q1_b_ii.csv  q1_b_iii.csv  q1_b_iii_exponential.csv  q1_b_iii_linear.csv  q1_b_iii_slow.csv
easom_simulated_annealing/src/: main.rs
maze_solver/: Cargo.toml  README.md  maze.txt
maze_solver/src/: astar.rs  bfs.rs  dfs.rs  main.rs  maze.rs  renderer.rs
pid_ga/: Q2_perfFCN.m  a2_q3.m  fitness.m
pso/: README.md  adjacency.txt  data_points.csv  pyproject.toml
pso/pso/: pso_run.py
pso/src/: aco.py  pso.py
subtraction_game_minimax/: 15,5,true.txt  5,5,true.txt  7,7,true.txt  Cargo.toml  README.md
subtraction_game_minimax/src/: main.rs
tabu_search/: Makefile  tabu_search.cpp
