[tool.poetry]
name = "pso"
version = "0.1.0"
description = ""
authors = ["fairywreath <nerradfour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyswarms = "^1.3.0"
pandas = "^2.0.3"
scikit-opt = "^0.6.6"
antsys = "^0.1.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
