[tool.poetry]
name = "pso"
version = "0.1.0"
description = ""
authors = ["fairywreath <nerradfour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.0.3"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
